# photon

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
.sentrux/: rules.toml
docs/: VERIFICATION.md  configuration.md  macro-expansion.md  supply-chain.md
docs/adr/: 001-consumer-groups.md
docs/plans/: photon-e2e-matrix.md
infra/aws/broker-fleet/: .gitignore  README.md  bootstrap-bench.sh  bootstrap-broker.sh  deploy-bench.sh  deploy-brokers.sh  instances.env.example  provision.sh
infra/aws/fluvio-fleet/: README.md  bootstrap-bench.sh  bootstrap-broker.sh  deploy-bench.sh  deploy-brokers.sh  instances.env.example  provision.sh
infra/aws/fluvio-smoke/: README.md  bootstrap.sh  instances.env  instances.env.example  provision.sh
infra/aws/kafka-fleet/: README.md  bootstrap-bench.sh  bootstrap-broker.sh  deploy-bench.sh  deploy-brokers.sh  instances.env.example  provision.sh
infra/aws/kafka-smoke/: README.md  bootstrap.sh  provision.sh
infra/aws/scripts/: run-all-e2e-aws.sh
infra/aws/sqlite-smoke/: README.md  bootstrap.sh  instances.env  instances.env.example  provision.sh
infra/broker/: README.md  docker-compose.fluvio.yml  docker-compose.yml
infra/broker/config/: nats-1.conf  nats-2.conf  nats-3.conf  nats-single.conf
infra/broker/scripts/: down.sh  export-env.sh  export-fluvio-env.sh  export-kafka-env.sh  fluvio-register-spu.sh  fluvio-single.sh  kafka-single.sh  kill-node.sh  run-pb4-sweep.sh  run-pb5.sh  run-pfh-sweep-fluvio.sh  run-pfh-sweep-kafka.sh  run-pfh-sweep.sh  single-node.sh  up.sh
photon/: Cargo.toml  README.md  build.rs
photon-backend/: Cargo.toml  README.md
photon-backend-fluvio/: Cargo.toml  README.md
photon-backend-fluvio/src/: checkpoint.rs  config.rs  connect.rs  consumer.rs  lib.rs  message.rs  port.rs  publish.rs  replicas.rs  retention.rs  stream_shard.rs  subject.rs  topic.rs
photon-backend-fluvio/tests/: fluvio_contract.rs
photon-backend-kafka/: Cargo.toml  README.md
photon-backend-kafka/src/: checkpoint.rs  config.rs  connect.rs  consumer.rs  lib.rs  message.rs  port.rs  publish.rs  replicas.rs  retention.rs  stream_shard.rs  subject.rs  topic.rs
photon-backend-kafka/tests/: kafka_contract.rs
photon-backend-nats/: Cargo.toml  README.md
photon-backend-nats/src/: checkpoint.rs  config.rs  connect.rs  consumer.rs  kv.rs  lib.rs  message.rs  port.rs  publish.rs  replicas.rs  retention.rs  stream.rs  stream_shard.rs  subject.rs
photon-backend-nats/tests/: nats_contract.rs
photon-backend-sqlite/: Cargo.toml  README.md
photon-backend-sqlite/src/: config.rs  lib.rs  port.rs
photon-backend-sqlite/tests/: sqlite_contract.rs
photon-backend/benches/: dispatch_stub.rs  envelope_crypto.rs  shard_routing.rs
photon-backend/src/: delivery_mode.rs  descriptor.rs  error.rs  executor_services.rs  group_subscribe.rs  handler_ctx.rs  handler_descriptor.rs  handler_registry.rs  lib.rs  publish_routing.rs  registry.rs  shard_router.rs
photon-backend/src/backend/: capabilities.rs  context.rs  generic.rs  mod.rs  photon_backend.rs
photon-backend/src/checkpoint/: coalescer.rs  mod.rs
photon-backend/src/consumer_group/: coordinator.rs  lease_store.rs  mod.rs  static_assignment.rs
photon-backend/src/delivery/: dlq.rs  mod.rs  worker_pool.rs
photon-backend/src/event/: envelope.rs  mod.rs
photon-backend/src/instrumentation/: backend.rs  events.rs  labels.rs  metrics.rs  mod.rs
photon-backend/src/models/: event.rs  mod.rs  subscribe_opts.rs  subscription.rs  topic.rs
photon-backend/src/retention/: config.rs  hook.rs  mod.rs  partition.rs  reclaimer.rs  watermark.rs
photon-backend/src/storage/: in_proc.rs  mod.rs  partition.rs  port.rs
photon-backend/tests/: admin_snapshot.rs  checkpoint_regression.rs  handler_failure_dlq.rs  retention_no_checkpoint.rs  retention_reclaim.rs  topic_not_found.rs
photon-bench/: Cargo.toml  EXPERIMENTS.md  PERFORMANCE_STUDY.md  README.md
photon-bench/src/: cli.rs  fill_results.rs  main.rs  matrix.rs  matrix_campaign.rs  matrix_run.rs  run.rs  stats.rs
photon-bench/src/experiments/: mod.rs  registry.rs  resolve.rs  specs.rs
photon-bench/src/harness/: capture.rs  mod.rs  resource.rs
photon-bench/src/metrics/: latency.rs  load.rs  mod.rs  pass_eval.rs
photon-bench/src/projection/: aggregate.rs  inputs.rs  mod.rs  model.rs  pfh_reports.rs  render.rs
photon-bench/src/projection/scaling/: filter.rs  fit.rs  load.rs  mod.rs  render.rs
photon-bench/src/report/: mod.rs  schema.rs
photon-core/: Cargo.toml  README.md
photon-core/src/: error.rs  identity.rs  lib.rs  stub_identity.rs
photon-e2e/: Cargo.toml  README.md
photon-e2e/src/: lib.rs
photon-e2e/tests/: matrix_smoke.rs  scenarios.rs  subscribe_executor.rs
photon-macros/: Cargo.toml  README.md
photon-macros/src/: lib.rs  subscribe.rs  topic.rs
photon-runtime/: Cargo.toml  README.md
photon-runtime/src/: builder.rs  executor.rs  lib.rs  photon.rs  runtime.rs  subsystem_remote_url.rs
photon-runtime/src/admin/: mod.rs  snapshot.rs  types.rs
photon-telemetry/: Cargo.toml  README.md
photon-telemetry/src/: console.rs  global.rs  lib.rs  recording.rs
photon-testkit/: Cargo.toml  README.md
photon-testkit/src/: bench_handlers.rs  consumer_group.rs  cross_node.rs  fixtures.rs  group_topics.rs  identity.rs  lib.rs  runner.rs  scenario.rs  shared_store.rs
photon-testkit/src/backend_author/: contract.rs  harness.rs  mod.rs
photon-testkit/src/backends/: mod.rs  registry.rs
photon-testkit/src/bootstrap/: mod.rs  telemetry.rs  topology.rs
photon-testkit/src/matrix/: mod.rs  presets.rs
photon/docs/: configuration.md
photon/examples/: consumer_group.rs  embedded_mem.rs  keyed_topic.rs  manual_subscribe.rs  subscribe_v2.rs  telemetry_ops_log.rs
photon/src/: config.rs  lib.rs
photon/src/runtime/: host.rs  mod.rs  prelude.rs
photon/src/runtime/instrumentation/: mod.rs
profiling/: README.md
profiling/photon-bench/reports/: bm-p0-mem-embedded-aws-t3-medium.json  bm-p0-mem-embedded-aws-t3-small.json  bm-p0-mem-embedded-aws-t4g-medium.json  (+235 more)
(+64 files in other folders)
