[package]
name = "photon-backend-kafka"
version = "0.1.0"
edition = "2021"
description = "Kafka storage adapter for Photon"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
photon-backend = { path = "../photon-backend", default-features = false, features = ["runtime"] }
async-trait = { workspace = true }
async-stream = { workspace = true }
bytes = "1"
chrono = { workspace = true }
dashmap = { workspace = true }
futures = "0.3"
rskafka = "0.6"
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
futures = "0.3"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
uuid = { workspace = true }

[lints]
workspace = true
