[package]
name = "photon-macros"
version = "0.1.0"
edition = "2021"
description = "Proc macros for Photon pub/sub (#[photon::topic], #[photon::subscribe])"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
photon = { path = "../photon", features = ["runtime", "mem"] }
photon-core = { path = "../photon-core" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
