[package]
name = "photon-telemetry"
version = "0.1.0"
edition = "2021"
description = "Photon OpsLog telemetry port"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
serde_json = { workspace = true }

[features]
default = []
recording = []

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
